# Corten-FontSystem

./: .gitignore  COMPLETION-REPORT.md  Cargo.toml  README.md  create_components.py  font-system-specification.md
components/font_parser/: CLAUDE.md  Cargo.toml  README.md  component.yaml
components/font_parser/benches/: benchmarks.rs
components/font_parser/src/: color_fonts.rs  error.rs  lib.rs  types.rs  variable_fonts.rs  woff.rs  woff2.rs
components/font_parser/tests/: color_fonts_integration_tests.rs  integration.rs  unit.rs  variable_fonts_tests.rs
components/font_parser/tests/unit/: mod.rs  test_color_fonts.rs  test_opentype_font.rs  test_parse_error.rs  test_tag.rs
components/font_registry/: CLAUDE.md  Cargo.toml  README.md  component.yaml
components/font_registry/benches/: font_loading.rs  font_matching.rs
components/font_registry/src/: lib.rs  registry.rs  types.rs
components/font_registry/tests/: test_main.rs
components/font_registry/tests/integration/: mod.rs  test_system_fonts.rs
components/font_registry/tests/unit/: mod.rs  test_registry.rs
components/font_system_api/: CLAUDE.md  Cargo.toml  README.md  component.yaml
components/font_system_api/benches/: end_to_end.rs
components/font_system_api/src/: lib.rs  profiling.rs  system.rs  types.rs
components/font_types/: CLAUDE.md  Cargo.toml  README.md  component.yaml  quality-report.json
components/font_types/src/: lib.rs  types.rs
components/glyph_renderer/: CLAUDE.md  Cargo.toml  README.md  component.yaml
components/glyph_renderer/benches/: cache_performance.rs  glyph_rendering.rs
components/glyph_renderer/src/: lib.rs  types.rs
components/glyph_renderer/tests/: edge_case_tests.rs  freetype_integration_tests.rs  unit_tests.rs
components/platform_integration/: CLAUDE.md  Cargo.toml  README.md  component.yaml
components/platform_integration/benches/: benchmarks.rs
components/platform_integration/src/: lib.rs  types.rs
components/platform_integration/tests/: fontconfig_tests.rs  integration_tests.rs  unit_tests.rs
components/text_layout/: Cargo.toml  README.md
components/text_layout/benches/: benchmarks.rs
components/text_layout/src/: justification.rs  lib.rs  line_breaker.rs  paragraph.rs  types.rs  vertical.rs
components/text_shaper/: CLAUDE.md  Cargo.toml  README.md  component.yaml
components/text_shaper/benches/: benchmarks.rs
components/text_shaper/src/: lib.rs  shaper.rs  types.rs
components/text_shaper/tests/: test_contract_compliance.rs  test_harfbuzz_integration.rs  test_text_shaper.rs  unit_tests.rs
components/text_shaper/tests/contracts/: test_contract_compliance.rs
components/text_shaper/tests/unit/: test_types.rs
contracts/: font_parser.yaml  font_registry.yaml  font_system_api.yaml  font_types.yaml  glyph_renderer.yaml  platform_integration.yaml  text_shaper.yaml
docs/: CACHING-STRATEGY.md  DEPLOYMENT-READINESS-v0.1.0.md  FINAL-COMPLETION-REPORT.md  ORCHESTRATION-COMPLETION-REPORT.md  PERFORMANCE-BASELINE.md  SECURITY-AUDIT-v0.1.0.md  SECURITY-HARDENING.md  SECURITY-SUMMARY.md  SECURITY.md  SPECIFICATION-COMPLIANCE-REPORT.md  VERIFICATION-COMPLETION-REPORT.md  quality-dashboard.md
orchestration/: project-metadata.json  quality_metrics.py
tests/: uat_library_smoke_test.rs
tests/integration/: test_component_integration.rs
