[package]
name = "font_system_api"
version = "0.1.0"
edition = "2021"
authors = ["CortenBrowser Team"]
license = "MIT OR Apache-2.0"
description = "Public API and orchestration layer for the complete font system"

[dependencies]
# Add dependencies based on component needs

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"
test-case = "3.1"

[lib]
name = "font_system_api"
path = "src/lib.rs"

[[bench]]
name = "benchmarks"
harness = false
