[package]
name = "glyph_renderer"
version = "0.1.0"
edition = "2021"
authors = ["CortenBrowser Team"]
license = "MIT OR Apache-2.0"
description = "Glyph rasterization, hinting, subpixel rendering, and glyph caching"

[dependencies]
freetype-rs = "0.36"
# Note: freetype-rs provides FreeType library bindings for Rust
lru = "0.12"  # LRU cache implementation

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"
test-case = "3.1"

[lib]
name = "glyph_renderer"
path = "src/lib.rs"

[[bench]]
name = "glyph_rendering"
harness = false

[[bench]]
name = "cache_performance"
harness = false
