[package]
name = "platform_integration"
version = "0.1.0"
edition = "2021"
authors = ["CortenBrowser Team"]
license = "MIT OR Apache-2.0"
description = "Platform-specific font discovery (Linux, Windows, macOS)"

[dependencies]
# Platform-specific dependencies

[target.'cfg(target_os = "linux")'.dependencies]
fontconfig = "0.8"

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"
test-case = "3.1"

[lib]
name = "platform_integration"
path = "src/lib.rs"

[[bench]]
name = "benchmarks"
harness = false
