[package]
name = "text_shaper"
version = "0.1.0"
edition = "2021"
authors = ["CortenBrowser Team"]
license = "MIT OR Apache-2.0"
description = "Text shaping, bidirectional text, line breaking, and OpenType features"

[dependencies]
# Add dependencies based on component needs

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"
test-case = "3.1"

[lib]
name = "text_shaper"
path = "src/lib.rs"

[[bench]]
name = "benchmarks"
harness = false
