[package]
name = "text_shaper"
version = "0.1.0"
edition = "2021"
authors = ["CortenBrowser Team"]
license = "MIT OR Apache-2.0"
description = "Text shaping, bidirectional text, line breaking, and OpenType features"

[dependencies]
# Font system dependencies
font_types = { path = "../font_types" }
font_parser = { path = "../font_parser" }
font_registry = { path = "../font_registry" }

# Text shaping
harfbuzz_rs = "2.0"
unicode-bidi = "0.3"

# Error handling
thiserror = "1.0"

# Data structures
rustc-hash = "1.1"
lru = "0.12"  # LRU cache implementation

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"
test-case = "3.1"

[lib]
name = "text_shaper"
path = "src/lib.rs"

[[bench]]
name = "benchmarks"
harness = false
